<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <LinearLayout
        android:id="@+id/product_details_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_key"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/product_price_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_key"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/product_quantity_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity_key"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/product_details_key"
        android:paddingLeft="6dp">

        <TextView
            android:id="@+id/product_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/product_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/product_quantity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>

    </LinearLayout>


    <Button
        android:id="@+id/sell_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell_product"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textAllCaps="true"
        android:focusable="false"/>


</RelativeLayout>